# key4ship_PoC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  init_key4hep.sh  init_key4ship.sh  output_geo.gdml  test.py  test_1.py
detector_plugin/: CartesianStripXStereo.cpp  EmulsionTargetDetector.cpp  MTCDetector.cpp  SiPadDetector.cpp  SiTargetDetector.cpp
docs/: acts_integration.md  acts_material_migration.md  dd4hep_plugins.md  gaudi_pipeline.md  known_issues.md  mtc_scifi_hit_pipeline.md  remaining_acts_issues.md
event_display/: README.md  detector_config.json  event_display_eve.py  inspect_SND.py  launch.sh
gaudi_jobs/: inspect_contributions.py  scan_table.py
gaudi_jobs/1_mu_1_e_pipeline/: job1_overlay.py  job1_shuffler.py  job2_splitter.py  job4_tracking.py
gaudi_jobs/1mu-_1e-_pipeline/: 1mu-_1e-_pipeline.sh  job1_shuffler.py  job4_rntuple.py
gaudi_jobs/2_mu_1_e_pipeline/: job1_overlay.py  job1_shuffler.py  job4_tracking.py  job5_rntuple.py
gaudi_jobs/2_mu_ang_pipeline/: job1_overlay.py  job1_shuffler.py  job4_tracking.py  job5_rntuple.py
gaudi_jobs/2_mu_pipeline/: 2_mu_pipeline.sh  job1_overlay.py  job1_shuffler.py  job4_tracking.py
gaudi_jobs/3_mu_pipeline/: job1_overlay.py  job1_shuffler.py  job4_tracking.py  job5_rntuple.py
gaudi_jobs/e_pi_pipeline/: job1_overlay.py  job4_tracking.py
gaudi_jobs/mu_pi_pipeline/: job1_overlay.py  job4_tracking.py  job5_rntuple.py
gaudi_jobs/multi_pg_geoA_pipeline/: job1_overlay.py  job3_digitize.py  job4_tracking.py  job5_rntuple.py  run_scan.sh
gaudi_jobs/multi_pg_geoB_pipeline/: job1_overlay.py  job4_tracking.py  job5_rntuple.py  run_scan.sh
gaudi_jobs/multi_pg_pipeline/: job1_mcanalysis.py  multi_pg_pipeline.sh
gaudi_jobs/muon_10k_pipeline/: debug.txt  debug_1.txt  debug_2.txt  debug_5.txt  debug_tracking_10.txt  debug_tracking_9.txt  job1_shuffler.py  job3_digitize.py  job4_tracking.py  job5_rntuple.py  muon_pipeline.sh  seg_fault.txt
gaudi_jobs/muon_pipeline/: .__afs21D4  MTC_OVERCURVATURE_FINDINGS.md  debug_3.txt  debug_4.txt  debug_6.txt  debug_7.txt  debug_tracking_8.txt  diagnose_mtc_curvature.py  event_check.py  job1_overlay.py  job1_shuffler.py  job2_splitter.py  job3_digitize.py  job4_tracking.py  job5_rntuple.py  muon_pipeline.sh  rntuple_reader.py
gaudi_jobs/two_muons_pipeline/: job1_shuffler.py  job3_digitize.py  job4_rntuple.py  job5_rntuple.py  job_tracking.py
gaudi_source/: ACTSGeoSvc.cpp  ACTSGeoSvc.h  ACTSProtoTracker.cpp  BasicDigitizer.cpp  ContributionInspector.h  DelayTagger.cpp  EDM4HEP2RNTuple.cpp  EventMerger.cpp  EventOverlay.cpp  EventShuffler.cpp  EventWindowSplitter.cpp  ISNDGeoSvc.h  MCParticleAnalyzer.cpp  MTCSciFiMeasConverter.cpp  SciFiDigitizer.cpp  SiPadMeasConverter.cpp  SiTargetMeasConverter.cpp  ValidationUtils.h
geometry/: SND_compact.xml  SiPadDetector.xml  SiPixelDetector.xml  SiTarget.xml
install/lib64/: SND_sim.components  libSiTargetDetector_plugin.components
options/: digitize.py
plugins/: SiPadDetector.cpp  SiPixelDetector.cpp  SiTargetDetector.cpp  SiTargetDetector.cpp.bak
reco/: BasicDigitizer.cpp  ContributionInspector.cpp  ContributionInspector.h  DelayTagger.cpp  EventMerger.cpp  EventShuffler.cpp  EventWindowSplitter.cpp  GeV2MIPConversion.cpp
run_scripts/: ddsim_steering.py  digitize.py  inspect_contributions.py  job1_delay_tagger.py  job2_event_merger.py  job3_splitter.py  job_shuffler.py  job_splitter.py
simulation/ddg4/: SND_SciFiAction.cpp
simulation/geometry/: EmulsionTarget.xml  MTCDetector.xml  SND_compact.xml  SND_compact_geoA.xml  SND_compact_geoB.xml  SiPadDetector.xml  SiTarget.xml  config.py  materials.xml  parameters.yaml  parameters_geoA.yaml  parameters_geoB.yaml  parse_geometry.py
simulation/geometry/gdml/: SND_compact.gdml
simulation/run_script/: README_multiplePG.md  clean.sh  ddsim_steering.py  generic_condor.sh  generic_condor_multiplePG.sh  launch_PG.sh  launch_multiplePG.sh  launch_multiplePG_geo.sh  multiplePG_base.py  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_-1000_0.1_0.1.py  test.py
simulation/run_script/log/: outfile_runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_0.1_-1000.txt  outfile_runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_15.0_-1000.txt
simulation/run_script/steer/: runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_0.1_-1000.py  runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_0.1_-1000.sh  runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_0.1_-1000.sub  runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_15.0_-1000.py  runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_15.0_-1000.sh  runddsim_QGSP_BERT_SND_e-_50GeV_xyz_0.1_15.0_-1000.sub  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_0.1_-1000.py  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_0.1_-1000.sh  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_0.1_-1000.sub  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_15.0_-1000.py  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_15.0_-1000.sh  runddsim_QGSP_BERT_SND_mu-_50GeV_xyz_0.1_15.0_-1000.sub
